# sms-contest

evalclient/evalclient/: Makefile.am  Makefile.in  MimeCodes.h  clientobject.cpp  clientobject.h  connectionhandler.cpp  connectionhandler.h  connectionmsgblock.h  crc_32.cpp  crc_32.h  evalsim  evalsim.cpp  giftdetails.cpp  main.cpp  out  partdetails.cpp  strtokenizer.h  timestamp.cpp
evalclient/evalclient/CVS/: Entries  Repository
evalclient/evalclient/docs/: Makefile  Makefile.in
evalclient/evalclient/docs/CVS/: Entries  Repository
evalclient/evalclient/docs/en/: Makefile  Makefile.in
evalclient/evalclient/docs/en/CVS/: Entries  Repository
evalclient/evalclient/templates/CVS/: Repository
evalserver-v2/evalserver/: Count.h  Makefile.am  Makefile.in  client_acceptor.cpp  client_acceptor.h  client_handler.cpp  client_handler.h  competition.db  connectionmsgblock.cpp  connectionmsgblock.h  contest.cpp  contest.h  crc_32.cpp  crc_32.h  day.cpp  day.h  evalserver.out  giftdetails.cpp  giftdetails.h  logger.cpp  logger.h  logmsg_mo.cpp  logmsg_mo.h  main.cpp  partdetails.cpp  partdetails.h  processor.cpp  processor.h  processor_mo.cpp  processor_mo.h  reconstructdb  sqliteconnection.cpp  sqliteconnection.h  sqltable.h  strtokenizer.cpp  strtokenizer.h  thread_pool.cpp  thread_pool.h  timeperiod.cpp  timeperiod.h  (+2 more)
evalserver-v2/evalserver/CVS/: Entries  Repository
evalserver-v2/evalserver/TransactionLogs/: 20031111_1.sql  20031111_10.sql  20031111_100.sql  20031111_101.sql  20031111_102.sql  20031111_103.sql  20031111_104.sql  20031111_105.sql  20031111_106.sql  20031111_107.sql  20031111_108.sql  20031111_109.sql  20031111_11.sql  20031111_110.sql  20031111_111.sql  20031111_112.sql  20031111_113.sql  20031111_114.sql  20031111_115.sql  20031111_116.sql  20031111_117.sql  20031111_118.sql  20031111_119.sql  20031111_12.sql  20031111_120.sql  20031111_121.sql  20031111_122.sql  20031111_123.sql  20031111_124.sql  20031111_125.sql  20031111_126.sql  20031111_127.sql  20031111_128.sql  20031111_129.sql  20031111_13.sql  20031111_130.sql  20031111_131.sql  20031111_132.sql  20031111_133.sql  20031111_134.sql  (+465 more)
evalserver-v2/evalserver/docs/: Makefile.in
evalserver-v2/evalserver/docs/CVS/: Entries  Repository
evalserver-v2/evalserver/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
evalserver-v2/evalserver/docs/en/CVS/: Entries  Repository
evalserver-v2/evalserver/templates/CVS/: Entries  Repository
evalsim/evalsim/: .#Makefile.in.1.5  .#connectionthread.cpp.1.4  .#main.cpp.1.3  .#simtraffic.cpp.1.3  .#simtraffic.h.1.4  .#timerhandle.cpp.1.4  Makefile.am  Makefile.in  MimeCodes.h  connectionmsgblock.cpp  connectionthread.cpp  connectionthread.h  evalsim.out  giftdetails.h  main.cpp  parse_timestamp  parse_timestamp.cpp  partdetails.h  results_evalsim_1  simbatchtimerhandle.cpp  simbatchtimerhandle.h  simconnectionhandler.cpp  simconnectionhandler.h  simlogger.cpp  simlogger.h  simtraffic.cpp  simtraffic.h  strtokenizer.cpp  strtokenizer.h  timeperiod.cpp  timeperiod.h  timerhandle.cpp  timerhandle.h  timestamp.h  tot
evalsim/evalsim/CVS/: Entries  Repository
evalsim/evalsim/docs/: .#Makefile.1.1.1.1  .#Makefile.1.2  .#Makefile.1.4  .#Makefile.1.8  .#Makefile.in.1.2  Makefile  Makefile.in
evalsim/evalsim/docs/CVS/: Entries  Repository
evalsim/evalsim/docs/en/: .#Makefile.1.1.1.1  .#Makefile.1.2  .#Makefile.1.4  .#Makefile.1.5  .#Makefile.in.1.2  Makefile  Makefile.in
evalsim/evalsim/docs/en/CVS/: Entries  Repository
evalsim/evalsim/templates/CVS/: Entries  Repository
evalstat/evalstat/: Makefile.am  Makefile.in  competition.db  evaldata.cpp  evaldata.h  htmleditor.cpp  htmleditor.h  logger.cpp  logger.h  main.cpp  report.cpp  report.h  report_log  sqliteconnection.cpp  sqliteconnection.h  sqltable.cpp  sqltable.h  timestamp.cpp  timestamp.h
evalstat/evalstat/CVS/: Entries  Repository
evalstat/evalstat/docs/: Makefile  Makefile.in
evalstat/evalstat/docs/CVS/: Entries  Repository
evalstat/evalstat/docs/en/: Makefile  Makefile.in
evalstat/evalstat/templates/CVS/: Entries  Repository
(+272 files in other folders)
