####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = evalclient

## INCLUDES were found outside kdevelop specific part

evalclient_SOURCES = strtokenizer.cpp giftdetails.cpp connectionhandler.cpp timestamp.cpp timeperiod.cpp partdetails.cpp crc_32.cpp connectionmsgblock.cpp clientobject.cpp main.cpp 
evalclient_LDADD   = -lACE


EXTRA_DIST = main.cpp clientobject.cpp clientobject.h connectionmsgblock.h connectionmsgblock.cpp crc_32.cpp crc_32.h partdetails.h partdetails.cpp timeperiod.cpp timeperiod.h timestamp.cpp timestamp.h connectionhandler.cpp connectionhandler.h giftdetails.cpp giftdetails.h strtokenizer.cpp strtokenizer.h MimeCodes.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
evalclient_LDFLAGS = $(all_libraries) 
                                                                                
