####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = evalsim

## INCLUDES were found outside kdevelop specific part

evalsim_SOURCES = timeperiod.cpp giftdetails.cpp strtokenizer.cpp simlogger.cpp simtraffic.cpp crc_32.cpp partdetails.cpp connectionmsgblock.cpp simconnectionhandler.cpp connectionthread.cpp timestamp.cpp timerhandle.cpp main.cpp 
evalsim_LDADD   = -lACE


EXTRA_DIST = main.cpp timerhandle.cpp timerhandle.h timestamp.cpp timestamp.h connectionthread.cpp connectionthread.h simconnectionhandler.cpp simconnectionhandler.h connectionmsgblock.cpp connectionmsgblock.h partdetails.cpp partdetails.h crc_32.cpp crc_32.h simtraffic.cpp simtraffic.h simlogger.cpp simlogger.h strtokenizer.cpp strtokenizer.h giftdetails.cpp giftdetails.h timeperiod.cpp timeperiod.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
evalsim_LDFLAGS = $(all_libraries) 
                                                                                
